fix map-modal sizes on mobiles

--- a/src/styles/components/_map.scss
+++ b/src/styles/components/_map.scss
@@ -8,7 +8,7 @@
 
     &__instruction {
         position: absolute;
-        width: 270px;
+        width: 290px;
         height: 100px;
         left: 10px;
         top: 10px;
@@ -26,7 +26,7 @@
         height: 100px;
         left: 10px;
         top: 10px;
-        grid-template-columns: 70px 1fr;
+        grid-template-columns: 65px 1fr;
         padding: 10px;
         font-size: 1.6rem;
         z-index: 1;
@@ -49,9 +49,10 @@
         }
 
         &-input {
+            width: 100%;
             border: none;
             border-bottom: 1px solid $color-secondary;
-            padding: 4px 5px;
+            padding: 6px 0px 6px 10px;
             border-radius: 2px;
         }
 
@@ -65,6 +66,7 @@
         }
 
         &-button {
+            max-width: 100%;
             display: block;
             grid-column: 2/-1;
             background-color: $color-secondary;
